metacatui/src/main/webapp/css/metacatui-common.css
/* ... */
/* For list mode only */
.list-only #sidebar{
	display: none;
}
.list-only #results-container{
	width: 100%;
	overflow-y: visible;
	overflow-x: visible;
}
.list-only .map-toggle-container{
	display: none;
}
/****************************************** 
** Filters ***
******************************************/
.filter-container{
	width: 187px;
}
.filter-contain{
	border-bottom: 1px dashed #CCC;
	padding: 10px 0px 5px 0px;
	width: 100%;
	height: auto;
	max-height: 1.4em;
	transition: max-height .5s ease-in-out;
	-webkit-transition: max-height .5s ease-in-out;
	-moz-transition: max-height .5s ease-in-out;
  	overflow: hidden;
}   
.filter-input-contain{
	clear: both;
}
.filter-contain > label{
   	font-size: 13px;
   	font-weight: bold;
   	display: inline-block;
   	height: 2em;
}
.current-filters-container{
  margin-bottom: 10px;
  display: block;
  clear: both;
  border-bottom: 2px solid #DDD;
  padding-left: 10px;
  padding-right: 25px;
}
.current-filters > .current-filter,
.current-filters > .current-filter[class*="span"]{
  padding: 0px 5px 0px 5px;
  min-height: 1.5em;
  line-height: 1.5em;
  width: 100%;
  width: calc(100% - 20px);
  margin: 5px 0px;
  border-radius: 3px;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  font-size: 13px;
}
.current-filters,
.current-filters[class*="span"]{
	list-style: none;
	margin-left: 0px;
	min-height: 0px;
}
.current-filter > span{
	max-width: 90%;
	overflow: hidden;
	white-space: normal;
	word-break: break-word;
	display: inline-block;
}
.current-filter .category{
	font-weight: bold;
	margin-right: 5px;
}
.current-filter > .icon{
	margin-left: 5px;
}
#sidebar{
  	width: 225px;
  	height: auto;
  	overflow-y: visible;
  	overflow-x: visible;
	float: left;
	clear: left;
}
.mapMode #sidebar{
	width: 215px;
	height: 700px;
	border-right: 1px solid #CCC;
	overflow-x: hidden;
	overflow-y: overlay;
	-webkit-transform: translate3d(0,0,0);
}
#sidebar > *{
  padding-left: 10px;
  padding-right: 25px;
  width: calc(100% - 35px);
}
#sidebar > .input-append{
	margin-top: 10px;
	border-bottom: 2px solid #DDD;
	padding-bottom: 16px;
}
#sidebar > .input-append > label{
	font-size: 15px;
	font-weight: bold;
}
#sidebar .tooltip-inner{
	font-size: 1.2em;
	font-weight: normal;
}
#all_input {
	width: 75%;
	width: calc(100% - 50px);
	margin-left: 0px;
}
.filter-input-contain input.filter{
	width: 64%;
}
/*-- Pagination and sort --*/
.sort-by{
	float: right;
}
.sort-by label {
    display: inline;
    margin-right: 5px;
    line-height: 30px;
    vertical-align: top;
}
.sort-by select{
	width: auto;
}
/*-- The filter checkboxes --*/
#includes-files label{
 	margin-right: 4px;
 	float: left;
 	font-size: 13px;
 	width: auto;
}
.filter-contain .checkbox-list {
    margin-left: 0px;
 	list-style: none;
}
.checkbox-list > li > input{
 	float: left;
 	margin-right: 10px;
 	margin-left: 3px;
}
.checkbox-list label{
 	font-size: .9em;
 	clear: both;
}
.checkbox-list .more-link,
.checkbox-list .less-link{
	font-weight: normal;
	font-size: .9em;
} 
.checkbox-list .more-link  .icon,
.checkbox-list .less-link  .icon{
	margin-left: 5px;
	font-size: 1.2em;
	vertical-align: text-bottom;
  	line-height: .9em;
}
/** UI Buttonsets **/
.ui-buttonset label,
.ui-buttonset label.ui-state-active{
    float: none;
}
.ui-buttonset label#data-year-label,
.ui-buttonset label#pub-year-label{
 	margin: 0px 5px 5px 0px;
 	float: left;
 	width: auto;
}
.ui-buttonset input[type="checkbox"]{
   	display: none;
}
.ui-buttonset .icon-check-empty, 
.ui-buttonset .icon-check{
	margin-right: 5px;
}
label.ui-state-active i.icon-check-empty, 
label.ui-state-default i.icon-check {
  display: none;
}
label.ui-state-active i.icon-check{
	display: inline;
}
/** Filter icons **/
.filter-contain > label > .icon{
	color: #888;
	font-size: 17px;
	float: left;
	margin: 0px;
	margin-right: 8px;
}  
.filter-contain .icon.more-info{
   	font-size: 14px;
   	line-height: 23px;
   	top: 5px;
   	float: left;
   	cursor: default;
}   
.filter-contain .icon.expand,
.filter-contain .icon.collapse{
	margin-right: 15px;
}
#filter-year > .icon,
#includes-files > .icon{
  	margin-top: 0px;
}  
.filter-contain > .icon-sitemap{
  	font-size: 18px;
}  
.filter-contain > .icon-map-marker{
  	font-size: 22px;
}
.current-filters.active {
  background-color: inherit;
  border-color: inherit;
  display: inline-block;
  float: none;
}
/** For "My Packages" filter **/
.keyword-search-link,
.current-filters > li.keyword-search-link {
	display: none;
}
.keyword-search-link.active,
.current-filters > li.keyword-search-link.active{
	border-color: inherit;
	display: inline-block;
	width: auto;
}

/*******************************************
   Registry and Forms
******************************************/
/* Do not use the .label Bootstrap styles on labels in forms */
form .label,
#DynamicContent .label {
  background-color: inherit;
  color: inherit;
  text-shadow: inherit;
  font-size: inherit;
  font-weight: inherit;
  display: inherit;
  padding: inherit;
  line-height: inherit;
  white-space: inherit;
  vertical-align: inherit;
}
.has-error input,
input.has-error{
  border-color: #a94442;
  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
  box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
}
.has-error input:focus,
input.has-error:focus{
  border-color: #843534;
  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 6px #ce8483;
  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 6px #ce8483;
}
.has-error label,
.has-error > div.text-left{ /* div.text-left is for Metacat-specific (2.4.X and before) login markup */
	color: #a94442;
	font-weight: bold;
}
form .text-left > .icon {
  margin-left: 10px;
  font-size: 1.1em;
}
.input-append .tooltip-inner {
  white-space: normal;
}
.input-append .alert{
	font-size: 14px;
	margin-top: 10px;
}
.form-group input.control-group{
	line-height: 30px;
}
.form-group input ~ .help-text,
.form-group input ~ .help-text ~ .form-feedback {
    display: block;
    margin-left: 24%;
}
/* ... */

